--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,24 @@ html {
 
 .board {
   border: 1px solid black;
+  display: grid;
+  grid-template-columns: 20% 40% 40%;
+  grid-template-rows: auto 1fr auto;
+}
+
+.psuedo-board {
+  background-color: yellow;
+}
+
+.above-board {
+  background-color: grey;
+  height: 30px;
+  width: 30px;
 }
 
 .square {
   border: 1px solid black;
+  border-radius: 50%;
   height: 30px;
   width: 30px;
 }
