--- a/css/style.css
+++ b/css/style.css
@@ -18,26 +18,73 @@ html {
   font-size: 62.5%;
 }
 
-.board {
-  border: 1px solid black;
+.body {
+  text-align: center;
+}
+
+.structure {
+  /* border: 1px solid black; */
   display: grid;
-  grid-template-columns: 20% 40% 40%;
-  grid-template-rows: auto 1fr auto;
+  height: 600px;
+  grid-template-columns: 30px 1fr 30px;
+  /* 9 columns leg, 7 eq, leg */
+  grid-template-rows: 50px repeat(2, 1fr) 100px;
+  margin: 10px auto;
+  width: 700px;
+}
+
+.board {
+  border: 1px red solid;
+  display: grid;
+  grid-column: 2 / 3;
+  grid-row: 1 / 4;
+  grid-template-columns: 20px repeat(7, 2fr) 20px;
+  grid-template-rows: auto repeat(2, 1fr) 40px;
+  justify-self: stretch;
 }
 
 .psuedo-board {
   background-color: yellow;
+  grid-column: 1 / 9;
+  grid-row: 2 / 4;
+  position: relative;
+  z-index: -1;
+}
+
+.column {
+  align-content: center;
+  justify-content: center;
+  width: 91.1px;
 }
 
 .above-board {
   background-color: grey;
-  height: 30px;
-  width: 30px;
+  height: 55px;
+  width: 55px;
+}
+
+.legs {
+  background-color: blue;
+}
+
+.legL {
+  grid-column: 1 / 1;
+  grid-row: 3 / 5;
+}
+.legR {
+  grid-column: 3 / 4;
+  grid-row: 3 / 5;
 }
 
 .square {
   border: 1px solid black;
   border-radius: 50%;
-  height: 30px;
-  width: 30px;
+  height: 55px;
+  margin: 10px auto;
+  width: 55px;
+}
+
+.reset {
+  grid-column: 1 / 1;
+  grid-row: 3 / 5;
 }
