--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ html {
   /* border: 1px solid black; */
   display: grid;
   height: 600px;
-  grid-template-columns: 30px 1fr 30px;
+  grid-template-columns: 5px 20px 1fr 20px 5px;
   /* 9 columns leg, 7 eq, leg */
   grid-template-rows: 50px repeat(2, 1fr) 100px;
   margin: 10px auto;
@@ -34,18 +34,20 @@ html {
 }
 
 .board {
-  border: 1px red solid;
+  /* border: 1px red solid; */
   display: grid;
-  grid-column: 2 / 3;
+  grid-column: 3 / 4;
   grid-row: 1 / 4;
-  grid-template-columns: 20px repeat(7, 2fr) 20px;
+  grid-template-columns: repeat(7, 2fr);
   grid-template-rows: auto repeat(2, 1fr) 40px;
   justify-self: stretch;
 }
 
 .psuedo-board {
   background-color: yellow;
-  grid-column: 1 / 9;
+  border: 1px black solid;
+  border-radius: 3px;
+  grid-column: 2 / 5;
   grid-row: 2 / 4;
   position: relative;
   z-index: -1;
@@ -59,20 +61,26 @@ html {
 
 .above-board {
   background-color: grey;
+  border-radius: 50px;
   height: 55px;
+  margin: 0 auto;
   width: 55px;
+}
+.above-board:hover {
+  background-color: rgb(240, 165, 165);
 }
 
 .legs {
   background-color: blue;
+  border: 1px black solid;
 }
 
 .legL {
-  grid-column: 1 / 1;
+  grid-column: 1 / 3;
   grid-row: 3 / 5;
 }
 .legR {
-  grid-column: 3 / 4;
+  grid-column: 4 / 6;
   grid-row: 3 / 5;
 }
 
@@ -85,6 +93,8 @@ html {
 }
 
 .reset {
-  grid-column: 1 / 1;
+  background-color: blue;
+  grid-column: 3 / 6;
   grid-row: 3 / 5;
+  justify-self: center;
 }
