--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ html {
   height: 600px;
   grid-template-columns: 5px 20px 1fr 20px 5px;
   /* 9 columns leg, 7 eq, leg */
-  grid-template-rows: 50px repeat(2, 1fr) 100px;
+  grid-template-rows: 60px repeat(2, 1fr) 20px 100px;
   margin: 10px auto;
   width: 700px;
 }
@@ -38,32 +38,33 @@ html {
   display: grid;
   grid-column: 3 / 4;
   grid-row: 1 / 4;
-  grid-template-columns: repeat(7, 2fr);
-  grid-template-rows: auto repeat(2, 1fr) 40px;
+  grid-auto-flow: row;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(7, 1fr);
   justify-self: stretch;
 }
 
 .psuedo-board {
   background-color: yellow;
   border: 1px black solid;
-  border-radius: 3px;
+  border-radius: 10px;
   grid-column: 2 / 5;
-  grid-row: 2 / 4;
+  grid-row: 2 / 5;
   position: relative;
   z-index: -1;
 }
 
-.column {
+/* .column {
   align-content: center;
   justify-content: center;
   width: 91.1px;
-}
+} */
 
 .above-board {
   /* background-color: grey; */
   border-radius: 50px;
   height: 60px;
-  margin: 20 auto;
+  margin: 0px auto;
   width: 60px;
 }
 .above-board:hover {
@@ -77,24 +78,36 @@ html {
 
 .legL {
   grid-column: 1 / 3;
-  grid-row: 3 / 5;
+  grid-row: 3 / 6;
 }
 .legR {
   grid-column: 4 / 6;
-  grid-row: 3 / 5;
+  grid-row: 3 / 6;
 }
 
 .square {
+  background-color: white;
   border: 1px solid black;
   border-radius: 50%;
   height: 55px;
-  margin: 10px auto;
+  margin: 0px auto;
   width: 55px;
 }
 
 .reset {
   background-color: blue;
-  grid-column: 3 / 6;
-  grid-row: 3 / 5;
+  grid-column: 3 / 4;
+  grid-row: 4 / 5;
+  height: 20px;
+  align-self: flex-end;
   justify-self: center;
+  width: 100px;
+}
+
+.red {
+  background-color: red;
+}
+
+.yellow {
+  background-color: yellow;
 }
