--- a/css/style.css
+++ b/css/style.css
@@ -22,18 +22,20 @@ html {
 body {
   background: rgb(108, 162, 242);
   background: linear-gradient(
-    0deg,
-    rgb(87, 133, 201) 0%,
-    rgb(70, 110, 170) 100%
+    180deg,
+    rgb(87, 133, 201) 40%,
+    rgb(70, 110, 170) 80%
   );
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 .game-title {
   font-family: "Paytone One", sans-serif;
-  font-size: 87px;
+  font-size: 8rem;
   color: white;
   text-shadow: 2px 2px 4px #000000;
   margin: 5px auto 0px;
@@ -106,13 +108,13 @@ body {
 }
 
 .square {
-  background-color: rgb(91, 139, 211);
+  background-color: rgb(78, 121, 185);
   border: 1px solid black;
   border-radius: 50%;
   height: 55px;
   margin: 0px auto;
   width: 55px;
-  box-shadow: 1px 2px 5px #000000;
+  box-shadow: 0px -2px 2px #000000;
 }
 
 .reset {
