--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,16 @@ body {
     180deg,
     rgb(87, 133, 201) 40%,
     rgb(70, 110, 170) 80%
-  );
-  background-size: cover;
-  background-repeat: no-repeat;
+    );
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
-  margin: 0;
   padding: 0;
+  min-height: 100vh;
+  position: relative;
+  width: 100%;
 }
 
 .game-title {
@@ -154,4 +158,13 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 23px;
   font-weight: 700;
+}
+
+@media only screen and (max-device-width: 480px){
+
+  .game-title {
+    font-size: 15rem;
+    color: red;
+  }
+
 }
