--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  
 }
 
 /* The Universal Selector */
@@ -31,11 +32,22 @@ body {
   background-repeat: no-repeat; */
   height: 100vh;
   text-align: center;
+  --font-xxl: 8rem;
+  --font-xxl2: 7.5rem;
+  --font-xl: 4rem;
+  --font-xl2: 3.7rem;
+  --font-m: 2.8rem;
+  --font-m2: 2.4rem;
+  --font-s: .9rem;
+  --font-s2: .7rem;
+  --game-space-l: 60px;
+  --game-space-m: 48px;
+  --game-space-s: 40px;
 }
 
 .game-title {
   font-family: "Paytone One", sans-serif;
-  font-size: 8rem;
+  font-size: var(--font-xxl);
   color: white;
   text-shadow: 2px 2px 4px #000000;
   margin: 5px auto 0px;
@@ -46,8 +58,8 @@ body {
   height: 600px;
   grid-template-columns: 5px 20px 1fr 20px 5px;
   grid-template-rows: 60px repeat(2, 1fr) 20px 100px;
-  margin: 5px auto;
-  width: 700px;
+  margin: 0px auto;
+  width: 650px;
 }
 
 .board {
@@ -57,6 +69,7 @@ body {
   grid-auto-flow: row;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(7, 1fr);
+  align-items: center;
   /* justify-self: stretch; */
 }
 
@@ -73,9 +86,10 @@ body {
 
 .above-board {
   border-radius: 50px;
-  height: 60px;
+  align-self: start;
+  height: var(--game-space-l);
   margin: 0px auto;
-  width: 60px;
+  width: var(--game-space-l);
 }
 
 .above-board:hover {
@@ -102,7 +116,7 @@ body {
 #message {
   color: yellow;
   font-family: "Paytone One", sans-serif;
-  font-size: 28px;
+  font-size: var(--font-xl);
   margin: 5px auto 5px;
   text-shadow: 1px 1px 4px #000000;
 }
@@ -111,9 +125,9 @@ body {
   background-color: rgb(78, 121, 185);
   border: 1px solid black;
   border-radius: 50%;
-  height: 55px;
+  height: var(--game-space-l);
   margin: 0px auto;
-  width: 55px;
+  width: var(--game-space-l);
   box-shadow: 0px -2px 2px #000000;
 }
 
@@ -131,7 +145,6 @@ body {
 
 .red {
   background-color: red;
-  color: red;
 }
 
 .black {
@@ -152,6 +165,96 @@ body {
   text-emphasis-color: rgb(0, 0, 0);
   text-shadow: 2px 2px 4px rgb(0, 0, 0);
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 23px;
+  font-size: var(--font-m);
   font-weight: 700;
+}
+
+@media only screen and (max-width: 700px) {
+  
+  .game-title {
+    font-size: var(--font-xxl2);
+    line-height: 7rem;
+    letter-spacing: .1rem;
+    padding: 2rem 2rem 1rem;
+  }
+  
+  .structure {
+    height: 470px;
+    grid-template-columns: 5px 15px 1fr 15px 5px;
+    grid-template-rows: 50px repeat(2, 1fr) 12px 55px;
+    margin: 0px auto;
+    width: 500px;
+  }
+  
+  .board {
+    display: grid;
+    grid-column: 3 / 4;
+    grid-row: 1 / 4;
+    grid-auto-flow: row;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    align-items: center;
+    margin-bottom: 5px;
+    /* justify-self: stretch; */
+  }
+  
+  .psuedo-board {
+    background-color: yellow;
+    border: 1px black solid;
+    border-radius: 8px;
+    grid-column: 2 / 5;
+    grid-row: 2 / 5;
+    position: relative;
+    z-index: -1;
+    box-shadow: 0px 1px 2px #000000;
+  }
+  
+  .above-board {
+    align-self: center;
+    border-radius: 50px;
+    height: var(--game-space-m);
+    margin: 0px auto;
+    width: var(--game-space-m);
+  }
+  
+  .square {
+    background-color: rgb(78, 121, 185);
+    border: 1px solid black;
+    border-radius: 50%;
+    height: var(--game-space-m);
+    margin: 0px auto;
+    width: var(--game-space-m);
+    box-shadow: 0px -2px 2px #000000;
+  }
+
+  .red {
+    background-color: red;
+  }
+  
+  .black {
+    background-color: black;
+  }
+
+  .reset {
+    border-radius: 3px;
+    height: 15px;
+    font-size: var(--font-s);
+    line-height: 0rem;
+  }
+
+  .legs {
+    border-radius: 3px;
+  }
+
+  #message {
+    font-size: var(--font-m2);
+    margin: 2px auto 2px;
+  }
+
+  .status-section > p {
+    font-size: var(--font-m2);
+    font-weight: 600;
+    margin: 20px 20px 0px;
+  }
+
 }
